# DONUT_MELT

./: .gitignore  .gitmodules  CMakeLists.txt  DONUT_MELT.c  README.md  VERY-AI-README.md  crsf.c  donut_config.h  receiver.h
!legacy/: donut_config.h  examples_of_everything.c  receiver.c
legacy/: PicoTesting.c
legacy/src_v1/: donut_melt copy.c  led_driver.h  motor_driver.c
lib/c_pico_bidir_dshot/: CMakeLists.txt  c_pico_dshot.cpp  c_pico_dshot.h
lib/c_pico_bidir_dshot/pico-bidir-dshot/: CMakeLists.txt
lib/c_pico_bidir_dshot/pico-bidir-dshot/src/: bidir_dshot_x1.h
lib/c_pico_bidir_dshot/tests/: default_test.c
lib/c_wrapped_pico_dshot/: CMakeLists.txt  c_pico_dshot.cpp  c_pico_dshot.h
lib/pico_H3LIS331DL/: H3LIS331DL.c  H3LIS331DL.h
lib/pico_H3LIS331DL/include/: H3LIS331DL.h
lib/pico_H3LIS331DL/src/: H3LIS331DL.c
lib/pico_crsf/: CMakeLists.txt  crsf.c  crsf.h
src/: donut_1lb_config.h  donut_3lb_config.h  donut_accel.c  donut_accel.h  donut_config.h  donut_dependencies.h  donut_drive.c  donut_drive.h  donut_melt.c  donut_meltier.c  donut_pc.c  donut_pc.h  donut_pdc.c  donut_pdc.h  donut_telemetry.c  donut_telemetry.h  donutmelt.c  led_driver.c  led_driver.h  motor_driver.c  motor_driver.h  openmelt_spin_control.cpp  openmelt_spin_control.h  receiver.c  receiver.h
tests/: accel_test.c  default_test.c  donut_blink_test.c  donut_drive_tests.c  dshot_from_tx_test.c  dshot_ramp_test.c  just_blink.c  just_blink_test.c  pull_pins_high.c  rx_tx_test.c
